--- a/README
+++ b/README
@@ -4,7 +4,7 @@
 *Update* April 12, 2012:
 
 Apple has released new security updates that check for and remove the common Flashback malware variants.
-I highly encourage Snow Leopard and Lion users to run Software Update and get the offical Apple tool.
+I highly encourage Snow Leopard and Lion users to run Software Update and get the official Apple tool.
 http://support.apple.com/kb/HT5247
 
 
